fix: Custom pledge field invisible

--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -108,7 +108,7 @@ button,
   }
 }
 
-.like-a__button input {
+.like-a__button [type='checkbox'] {
   display: none;
 }
 
